<?xml version="1.0" encoding="utf-8"?>
<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="end|center_vertical">

            <ImageView
                android:id="@+id/iv_more"
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:layout_marginHorizontal="16dp"
                android:src="@drawable/ic_more"
                app:tint="@color/black" />
        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".presentation.WelcomeFragment">

                <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="32dp"
                    android:contentDescription="@string/welcome_logo"
                    android:src="@drawable/ic_brain"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:gravity="center"
                    android:text="@string/welcome_title"
                    android:textColor="@color/black"
                    android:textSize="36sp"
                    app:layout_constraintTop_toBottomOf="@id/iv_logo" />

                <TextView
                    android:id="@+id/tv_game_rules"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/game_rules"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toTopOf="@id/button_understand"
                    app:layout_constraintTop_toBottomOf="@id/tv_title" />

                <Button
                    android:id="@+id/button_understand"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_gravity="bottom"
                    android:layout_marginHorizontal="24dp"
                    android:layout_marginBottom="36dp"
                    android:text="@string/button_understand"
                    app:cornerRadius="20dp"
                    app:layout_constraintBottom_toBottomOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </LinearLayout>
</layout>
